[package]
name = "gltf_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
colog = "1.3.0"
egui = "0.31.1"
egui_winit_vulkano = "0.28.0"
image = "0.25.6"
log = "0.4.27"
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
winit = "0.30.9"
