[package]
name = "gltf_viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
bytemuck = "1.22.0"
colog = "1.3.0"
egui = "0.31.1"
egui_file = "0.22.1"
# egui_winit_vulkano = "0.28.0"
egui_winit_vulkano = { git = "https://github.com/Kotexander/egui_winit_vulkano", branch = "allow-depth-buffer" }
gltf = "1.4.1"
image = "0.25.6"
log = "0.4.27"
mikktspace = "0.3.0"
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }
thiserror = "2.0.12"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
winit = "0.30.9"
